--- a/TestFiles/Project11/Pong/PongGame.vm
+++ b/TestFiles/Project11/Pong/PongGame.vm
@@ -90,12 +90,12 @@ return
 function PongGame.run 1
 push argument 0
 pop pointer 0
-label true.224
+label WhileTrue.224
 push this 3
 not
 not
-if-goto end.224
-label true.230
+if-goto endWhile.224
+label WhileTrue.230
 push local 0
 push constant 0
 eq
@@ -103,7 +103,7 @@ push this 3
 not
 and
 not
-if-goto end.230
+if-goto endWhile.230
 call Keyboard.keyPressed 0
 pop local 0
 push this 0
@@ -113,43 +113,44 @@ call moveBall 0
 push constant 50
 call Sys.wait 1
 pop temp 0
-label end.230
+goto WhileTrue.230
+label endWhile.230
 push local 0
 push constant 130
 eq
 not
-if-goto false.274
+if-goto ifFalse.274
 push this 0
 push constant 1
 call Bat.setDirection 2
 pop temp 0
-goto end.274
-label false.274
+goto endIf.274
+label ifFalse.274
 push local 0
 push constant 132
 eq
 not
-if-goto false.292
+if-goto ifFalse.292
 push this 0
 push constant 2
 call Bat.setDirection 2
 pop temp 0
-goto end.292
-label false.292
+goto endIf.292
+label ifFalse.292
 push local 0
 push constant 140
 eq
 not
-if-goto false.310
+if-goto ifFalse.310
 push constant 1
 not
 pop this 3
-goto end.310
-label false.310
-label end.310
-label end.292
-label end.274
-label true.325
+goto endIf.310
+label ifFalse.310
+label endIf.310
+label endIf.292
+label endIf.274
+label WhileTrue.325
 push local 0
 push constant 0
 eq
@@ -158,7 +159,7 @@ push this 3
 not
 and
 not
-if-goto end.325
+if-goto endWhile.325
 call Keyboard.keyPressed 0
 pop local 0
 push this 0
@@ -168,11 +169,13 @@ call moveBall 0
 push constant 50
 call Sys.wait 1
 pop temp 0
-label end.325
-label end.224
+goto WhileTrue.325
+label endWhile.325
+goto WhileTrue.224
+label endWhile.224
 push this 3
 not
-if-goto false.373
+if-goto ifFalse.373
 push constant 10
 push constant 27
 call Output.moveCursor 2
@@ -199,9 +202,9 @@ push constant 114
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
-goto end.373
-label false.373
-label end.373
+goto endIf.373
+label ifFalse.373
+label endIf.373
 push constant 0
 return
 function PongGame.moveBall 5
@@ -219,7 +222,7 @@ eq
 not
 and
 not
-if-goto false.427
+if-goto ifFalse.427
 push this 2
 pop this 5
 push constant 0
@@ -240,7 +243,7 @@ push this 2
 push constant 4
 eq
 not
-if-goto false.491
+if-goto ifFalse.491
 push local 1
 push local 4
 gt
@@ -252,32 +255,32 @@ pop this 3
 push this 3
 not
 not
-if-goto false.513
+if-goto ifFalse.513
 push local 4
 push local 1
 push constant 10
 add
 lt
 not
-if-goto false.519
+if-goto ifFalse.519
 push constant 1
 neg
 pop local 0
-goto end.519
-label false.519
+goto endIf.519
+label ifFalse.519
 push local 3
 push local 2
 push constant 10
 sub
 gt
 not
-if-goto false.539
+if-goto ifFalse.539
 push constant 1
 pop local 0
-goto end.539
-label false.539
-label end.539
-label end.519
+goto endIf.539
+label ifFalse.539
+label endIf.539
+label endIf.519
 push this 6
 push constant 2
 sub
@@ -297,19 +300,19 @@ pop temp 0
 push this 4
 call Output.printInt 1
 pop temp 0
-goto end.513
-label false.513
-label end.513
-goto end.491
-label false.491
-label end.491
+goto endIf.513
+label ifFalse.513
+label endIf.513
+goto endIf.491
+label ifFalse.491
+label endIf.491
 push this 1
 push local 0
 call Ball.bounce 2
 pop temp 0
-goto end.427
-label false.427
-label end.427
+goto endIf.427
+label ifFalse.427
+label endIf.427
 push constant 0
 return
 
