Maybe needs some debug

--- a/TestFiles/Project10/Square/Square.vm
+++ b/TestFiles/Project10/Square/Square.vm
@@ -23,7 +23,7 @@ function Square.draw 0
 push argument 0
 pop pointer 0
 push constant 1
-not
+neg
 call Screen.setColor 1
 pop temp 0
 push this 0
@@ -132,7 +132,7 @@ push constant 2
 sub
 pop this 1
 push constant 1
-not
+neg
 call Screen.setColor 1
 pop temp 0
 push this 0
@@ -178,7 +178,7 @@ push constant 2
 add
 pop this 1
 push constant 1
-not
+neg
 call Screen.setColor 1
 pop temp 0
 push this 0
@@ -230,7 +230,7 @@ push constant 2
 sub
 pop this 0
 push constant 1
-not
+neg
 call Screen.setColor 1
 pop temp 0
 push this 0
@@ -276,7 +276,7 @@ push constant 2
 add
 pop this 0
 push constant 1
-not
+neg
 call Screen.setColor 1
 pop temp 0
 push this 0
