--- a/TestFiles/Project11/Pong/Bat.vm
+++ b/TestFiles/Project11/Pong/Bat.vm
@@ -27,7 +27,7 @@ function Bat.show 0
 push argument 0
 pop pointer 0
 push constant 1
-not
+neg
 call Screen.setColor 1
 pop temp 0
 call draw 0
@@ -127,7 +127,7 @@ add
 call Screen.drawRectangle 4
 pop temp 0
 push constant 1
-not
+neg
 call Screen.setColor 1
 pop temp 0
 push this 0
@@ -176,7 +176,7 @@ add
 call Screen.drawRectangle 4
 pop temp 0
 push constant 1
-not
+neg
 call Screen.setColor 1
 pop temp 0
 push this 0
