--- a/TestFiles/Project9/Ball.vm
+++ b/TestFiles/Project9/Ball.vm
@@ -31,7 +31,7 @@ function Ball.draw 0
 push argument 0
 pop pointer 0
 push constant 1
-not
+neg
 call Screen.setColor 1
 pop temp 0
 push this 0
@@ -218,7 +218,7 @@ goto endIf.433
 label ifFalse.433
 label endIf.433
 push constant 1
-not
+neg
 return
 function Ball.pitchCurveLeft 0
 push argument 0
