--- a/TestFiles/Project9/Main.vm
+++ b/TestFiles/Project9/Main.vm
@@ -1,6 +1,6 @@
 function Main.main 8
 push constant 1
-not
+neg
 pop local 6
 push constant 10
 call String.new 1
@@ -33,7 +33,7 @@ pop local 7
 push constant 255
 push constant 100
 push constant 1
-not
+neg
 call Ball.new 3
 pop local 1
 push constant 200
@@ -79,7 +79,7 @@ call Random.nextInt 0
 pop local 7
 push local 1
 push constant 1
-not
+neg
 call Ball.setStillPitching 2
 pop temp 0
 goto endIf.165
