--- a/TestFiles/Project11/Square/SquareGame.vm
+++ b/TestFiles/Project11/Square/SquareGame.vm
@@ -15,6 +15,7 @@ function SquareGame.dispose 0
 push argument 0
 pop pointer 0
 push this 0
+push pointer 0
 call Square.dispose 1
 pop temp 0
 push pointer 0
@@ -31,6 +32,7 @@ eq
 not
 if-goto ifFalse.70
 push this 0
+push pointer 0
 call Square.moveUp 1
 pop temp 0
 goto endIf.70
@@ -42,6 +44,7 @@ eq
 not
 if-goto ifFalse.85
 push this 0
+push pointer 0
 call Square.moveDown 1
 pop temp 0
 goto endIf.85
@@ -53,6 +56,7 @@ eq
 not
 if-goto ifFalse.100
 push this 0
+push pointer 0
 call Square.moveLeft 1
 pop temp 0
 goto endIf.100
@@ -64,6 +68,7 @@ eq
 not
 if-goto ifFalse.115
 push this 0
+push pointer 0
 call Square.moveRight 1
 pop temp 0
 goto endIf.115
@@ -90,9 +95,12 @@ push constant 0
 eq
 not
 if-goto endWhile.166
+push pointer 0
 call Keyboard.keyPressed 0
 pop local 0
-call moveSquare 0
+push pointer 0
+call SquareGame.moveSquare 1
+pop temp 0
 goto WhileTrue.166
 label endWhile.166
 push local 0
@@ -112,6 +120,7 @@ eq
 not
 if-goto ifFalse.201
 push this 0
+push pointer 0
 call Square.decSize 1
 pop temp 0
 goto endIf.201
@@ -123,6 +132,7 @@ eq
 not
 if-goto ifFalse.216
 push this 0
+push pointer 0
 call Square.incSize 1
 pop temp 0
 goto endIf.216
@@ -175,9 +185,12 @@ eq
 not
 not
 if-goto endWhile.283
+push pointer 0
 call Keyboard.keyPressed 0
 pop local 0
-call moveSquare 0
+push pointer 0
+call SquareGame.moveSquare 1
+pop temp 0
 goto WhileTrue.283
 label endWhile.283
 goto WhileTrue.160
