--- a/TestFiles/Project11/Pong/Bat.vm
+++ b/TestFiles/Project11/Pong/Bat.vm
@@ -12,7 +12,9 @@ push argument 3
 pop this 3
 push constant 2
 pop this 4
-call show 0
+push pointer 0
+call Bat.show 1
+pop temp 0
 push pointer 0
 return
 function Bat.dispose 0
@@ -30,7 +32,9 @@ push constant 1
 neg
 call Screen.setColor 1
 pop temp 0
-call draw 0
+push pointer 0
+call Bat.draw 1
+pop temp 0
 push constant 0
 return
 function Bat.hide 0
@@ -39,7 +43,9 @@ pop pointer 0
 push constant 0
 call Screen.setColor 1
 pop temp 0
-call draw 0
+push pointer 0
+call Bat.draw 1
+pop temp 0
 push constant 0
 return
 function Bat.draw 0
@@ -79,10 +85,14 @@ return
 function Bat.setWidth 0
 push argument 0
 pop pointer 0
-call hide 0
+push pointer 0
+call Bat.hide 1
+pop temp 0
 push argument 1
 pop this 2
-call show 0
+push pointer 0
+call Bat.show 1
+pop temp 0
 push constant 0
 return
 function Bat.move 0
@@ -199,6 +209,7 @@ return
 
 
 //class symbol table
+//Bat
 //name: x
 //type: int
 //kind: field
@@ -222,6 +233,7 @@ return
 
 
 //method's symbol table
+//Bat.new
 //name: Ax
 //type: int
 //kind: argument
@@ -261,6 +273,7 @@ return
 
 
 //method's symbol table
+//Bat.dispose
 //name: this
 //type: Bat
 //kind: argument
@@ -288,6 +301,7 @@ return
 
 
 //method's symbol table
+//Bat.show
 //name: this
 //type: Bat
 //kind: argument
@@ -315,6 +329,7 @@ return
 
 
 //method's symbol table
+//Bat.hide
 //name: this
 //type: Bat
 //kind: argument
@@ -342,6 +357,7 @@ return
 
 
 //method's symbol table
+//Bat.draw
 //name: this
 //type: Bat
 //kind: argument
@@ -369,6 +385,7 @@ return
 
 
 //method's symbol table
+//Bat.setDirection
 //name: this
 //type: Bat
 //kind: argument
@@ -400,6 +417,7 @@ return
 
 
 //method's symbol table
+//Bat.getLeft
 //name: this
 //type: Bat
 //kind: argument
@@ -427,6 +445,7 @@ return
 
 
 //method's symbol table
+//Bat.getRight
 //name: this
 //type: Bat
 //kind: argument
@@ -454,6 +473,7 @@ return
 
 
 //method's symbol table
+//Bat.setWidth
 //name: this
 //type: Bat
 //kind: argument
@@ -485,6 +505,7 @@ return
 
 
 //method's symbol table
+//Bat.move
 //name: this
 //type: Bat
 //kind: argument
