--- a/TestFiles/Project11/Square/Main.vm
+++ b/TestFiles/Project11/Square/Main.vm
@@ -1,13 +1,10 @@
 function Main.main 1
-push pointer 0
 call SquareGame.new 0
 pop local 0
 push local 0
-push pointer 0
 call SquareGame.run 1
 pop temp 0
 push local 0
-push pointer 0
 call SquareGame.dispose 1
 pop temp 0
 push constant 0
@@ -15,9 +12,11 @@ return
 
 
 //class symbol table
+//Main
 
 
 //method's symbol table
+//Main.main
 //name: game
 //type: SquareGame
 //kind: var
